Corrected spelling mistake

--- a/README.textile
+++ b/README.textile
@@ -41,17 +41,17 @@ bc. class User < ActiveRecord::Base
   paginate_alphabetically :by => :surname, :show_all_letters => true
 end
 
-To use alphanumeric functionality use neumeric => true
+To use alphanumeric functionality use numeric => true
 
 bc. class User < ActiveRecord::Base
-  paginate_alphabetically :by => :surname, :neumeric => true
+  paginate_alphabetically :by => :surname, :numeric => true
 end
 
 Thanks to "hoverlover":http://github.com/hoverlover the alphabetically_paginate view helper can take an options hash which allows you to override the class if you don't want it to be 'pagination'. For example:
 
 bc. = alphabetically_paginate(@users, :class => 'user-pagination')
 
-bc. = alphabetically_paginate(@users, :class => 'user-pagination', :neumeric => true)
+bc. = alphabetically_paginate(@users, :class => 'user-pagination', :numeric => true)
 
 h2. Contributing
 
